--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
-project(untitled)
+project(queryprocessor)
 
 set(CMAKE_CXX_STANDARD 14)
 
 set(SOURCE_FILES main.cpp)
-add_executable(untitled ${SOURCE_FILES})
+add_executable(queryprocessor ${SOURCE_FILES})
